<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:keepScreenOn="true"
    tools:context="glumo.com.glumo.activity.EndOfFirstConfigurationActivity">


    <LinearLayout
        android:id="@+id/end_of_first_configuration_title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/end_of_first_configuration_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/end_of_first_configuration_activity_title"
            android:textColor="@android:color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_centerInParent="true">
        <TextView
            android:gravity="center"
            android:id="@+id/end_of_first_configuration_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/end_of_first_configuration_description"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textAlignment="center"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:src="@drawable/happy_character"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/hurray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/end_of_first_configuration_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_rounded_corners"
            android:padding="10dp"
            android:text="@string/end_of_first_configuration_button"
            android:textAllCaps="false"
            android:textColor="@drawable/button_rounded_corners_text"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>
